--- a/src/Components/carousel.css
+++ b/src/Components/carousel.css
@@ -1,3 +1,17 @@
+.mainContainerCarousel {
+  animation: zoom-in-zoom-out 1s ease forwards;
+  border-radius: 10px;
+}
+
+@keyframes zoom-in-zoom-out {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.7);
+  }
+}
+
 .bkgContainer {
   background-color: gray;
   background-position: center;
