--- a/src/Components/carousel.css
+++ b/src/Components/carousel.css
@@ -170,11 +170,13 @@
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 20px;
+  line-height: 12px;
   text-align: center;
   letter-spacing: 0.5px;
   text-transform: uppercase;
   color: #ffffff;
+  gap: 10px;
+  border-color: transparent;
 }
 
 .photoButtons :hover {
